--- a/ttk/2509g17/TTK4155-master/Oving1_TTK4155_G17_H17/Oving1_TTK4155_G17_H17/Debug/Makefile
+++ b/ttk/2509g17/TTK4155-master/Oving1_TTK4155_G17_H17/Oving1_TTK4155_G17_H17/Debug/Makefile
@@ -39,6 +39,7 @@ SUBDIRS :=
 C_SRCS +=  \
 ../adc.c \
 ../button_interrupts.c \
+../can.c \
 ../CFile1.c \
 ../input_conversion.c \
 ../i_o.c \
@@ -59,6 +60,7 @@ ASM_SRCS +=
 OBJS +=  \
 adc.o \
 button_interrupts.o \
+can.o \
 CFile1.o \
 input_conversion.o \
 i_o.o \
@@ -72,6 +74,7 @@ uart.o
 OBJS_AS_ARGS +=  \
 adc.o \
 button_interrupts.o \
+can.o \
 CFile1.o \
 input_conversion.o \
 i_o.o \
@@ -85,6 +88,7 @@ uart.o
 C_DEPS +=  \
 adc.d \
 button_interrupts.d \
+can.d \
 CFile1.d \
 input_conversion.d \
 i_o.d \
@@ -98,6 +102,7 @@ uart.d
 C_DEPS_AS_ARGS +=  \
 adc.d \
 button_interrupts.d \
+can.d \
 CFile1.d \
 input_conversion.d \
 i_o.d \
@@ -122,6 +127,8 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
